<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_Vguide10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_Vguide90"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_Hguide90"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/login_et_sing_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/et_singup"
        app:layout_constraintBottom_toTopOf="@id/login_Hguide90"
        app:layout_constraintStart_toStartOf="@id/login_Vguide10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn_sing_up"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_sing_up"
        app:layout_constraintBottom_toTopOf="@id/login_Hguide90"
        app:layout_constraintEnd_toEndOf="@id/login_Vguide90"
        app:layout_constraintStart_toEndOf="@id/login_et_sing_up" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn_login"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/log_in"
        app:cornerRadius="20dp"
        app:icon="@drawable/ic_login"
        app:iconGravity="start"
        app:layout_constraintBottom_toTopOf="@id/login_btn_sing_up"
        app:layout_constraintEnd_toStartOf="@id/login_Vguide90"
        app:layout_constraintStart_toStartOf="@id/login_Vguide10"
        app:strokeColor="@color/purple_200"
        app:strokeWidth="3dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:hint="@string/hint_password"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/design_default_color_primary"
        app:boxStrokeWidth="2dp"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@id/login_btn_login"
        app:layout_constraintEnd_toEndOf="@id/login_Vguide90"
        app:layout_constraintStart_toStartOf="@id/login_Vguide10"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_tie_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />


    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_til_user"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/login_Vguide10"
        app:layout_constraintEnd_toEndOf="@id/login_Vguide90"
        app:layout_constraintBottom_toTopOf="@id/login_til_password"
        android:layout_marginBottom="30dp"
        app:endIconMode="clear_text"
        android:hint="@string/hint_user"
        app:boxStrokeColor="@color/purple_200"
        app:boxStrokeWidth="2dp"
        app:helperText=""

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_tie_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>


    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>